--- a/Code/.vscode/settings.json
+++ b/Code/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "cph.general.onceMaintainerMessage": false
+    "cph.general.onceMaintainerMessage": false,
+    "files.associations": {
+        "*.ejs": "html",
+        "iostream": "cpp"
+    }
 }
