--- a/Code/.vscode/settings.json
+++ b/Code/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cph.general.onceMaintainerMessage": false,
     "files.associations": {
         "*.ejs": "html",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "new": "cpp"
     }
 }
