--- a/Code/.vscode/settings.json
+++ b/Code/.vscode/settings.json
@@ -18,6 +18,9 @@
         "span": "cpp",
         "stacktrace": "cpp",
         "regex": "cpp",
-        "valarray": "cpp"
+        "valarray": "cpp",
+        "ostream": "cpp",
+        "bitset": "cpp",
+        "numeric": "cpp"
     }
 }
