Routine commit, 7th September 2023

--- a/Code/.vscode/settings.json
+++ b/Code/.vscode/settings.json
@@ -21,7 +21,8 @@
         "valarray": "cpp",
         "ostream": "cpp",
         "bitset": "cpp",
-        "numeric": "cpp"
+        "numeric": "cpp",
+        "__availability": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
