2 Greedy questions rated 1700 solved

--- a/Code/.vscode/settings.json
+++ b/Code/.vscode/settings.json
@@ -51,7 +51,8 @@
         "utility": "cpp",
         "variant": "cpp",
         "istream": "cpp",
-        "queue": "cpp"
+        "queue": "cpp",
+        "stack": "cpp"
     },
     "C_Cpp.errorSquiggles": "disabled"
 }
